Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35731

QSGRenderLoop::s_instance is leaked on exit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.0
    • 5.2.0
    • Quick: SceneGraph
    • None
    • MSVC 2010, Windows 7
    • e13547c595913c58e6bd6a5ed80fdc729fae7d47

    Description

      QSGRenderLoop::instance() creates a loop object that is never destroyed. This causes a leak-on-exit as well as several destructors to never be called.

      Attachments

        For Gerrit Dashboard: QTBUG-35731
        # Subject Branch Project Status CR V

        Activity

          People

            apmontgo Alex Montgomery
            apmontgo Alex Montgomery
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes