Fix leak-on-exit of QSGRenderLoop::s_instance

s_instance is created with new and never deleted which causes several
destructors to never be called.

Task-number: QTBUG-35731
Change-Id: Icccb19186958f8bb74c5fd2b4b41165255debc46
Reviewed-by: Gunnar Sletta <gunnar.sletta@jollamobile.com>